// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PathResolver should merge errors 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": null,
      "user": Object {
        "profile": null,
      },
    },
  },
  "errors": Array [
    Object {
      "message": "Very Bad Error",
    },
  ],
}
`;

exports[`PathResolver should merge errors 2`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "profile": null,
      },
    },
  },
  "errors": Array [
    Object {
      "message": "Very Bad Error",
    },
    Object {
      "message": "Not So Bad Error",
    },
  ],
  "extensions": undefined,
}
`;

exports[`PathResolver should merge errors 3`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "profile": Object {
          "displayName": "Steven Seagal",
        },
      },
    },
  },
  "errors": Array [
    Object {
      "message": "Very Bad Error",
    },
    Object {
      "message": "Not So Bad Error",
    },
  ],
  "extensions": undefined,
}
`;

exports[`PathResolver should work on each chunk 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": null,
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
}
`;

exports[`PathResolver should work on each chunk 2`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work on each chunk 3`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": Object {
          "displayName": "Steven Seagal",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work on each chunk 4`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": false,
              },
            },
          ],
        },
        "profile": Object {
          "displayName": "Steven Seagal",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are combined 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are combined across boundaries 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": null,
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
}
`;

exports[`PathResolver should work when chunks are combined across boundaries 2`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are combined and split 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are combined and split 2`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": Object {
          "displayName": "Steven Seagal",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are split 1`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": null,
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
}
`;

exports[`PathResolver should work when chunks are split 2`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": null,
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;

exports[`PathResolver should work when chunks are split 3`] = `
Object {
  "data": Object {
    "viewer": Object {
      "currencies": Array [
        "USD",
        "GBP",
        "EUR",
        "CAD",
        "AUD",
        "CHF",
        "😂",
      ],
      "user": Object {
        "items": Object {
          "edges": Array [
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
            Object {
              "node": Object {
                "isFavorite": null,
              },
            },
          ],
        },
        "profile": Object {
          "displayName": "Steven Seagal",
        },
      },
    },
  },
  "errors": undefined,
  "extensions": undefined,
}
`;
